--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,16 @@
 {
-    "name": "sonata-project/cache-bundle",
-    "description": "This bundle provides caching services",
-    "keywords": ["cache block"],
+    "name": "rmzamora/cache-bundle",
+    "description": "Fork of SonataCacheBundle",
+    "keywords": ["cache block", "rmzamora fork"],
     "homepage": "https://github.com/sonata-project/SonataCacheBundle",
     "type": "symfony-bundle",
     "license": "MIT",
     "authors": [
+        {
+            "name": "Mell M. Zamora",
+            "email": "me@mellzamora.com",
+            "homepage": "http://mellzamora.com"
+        },
         {
             "name": "Thomas Rabaix",
             "email": "thomas.rabaix@sonata-project.org",
@@ -17,10 +22,10 @@
         }
     ],
     "require": {
-        "symfony/http-foundation": "~2.2",
-        "symfony/routing": "~2.2",
-        "symfony/security": "~2.2",
-        "symfony/process": "~2.2"
+        "symfony/http-foundation": "~2.4",
+        "symfony/routing": "~2.4",
+        "symfony/security": "~2.4",
+        "symfony/process": "~2.4"
     },
     "require-dev": {
         "doctrine/orm": "~2.2",
