--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "symfony/http-foundation": "~2.4",
         "symfony/routing": "~2.4",
         "symfony/security": "~2.4",
-        "symfony/process": "~2.4"
+        "symfony/process": "~2.4",
+        "sonata-project/cache": "~1.0@dev"
     },
     "require-dev": {
         "doctrine/orm": "~2.2",
