--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
         "doctrine/orm": "~2.2",
         "predis/predis": "~0.8",
         "symfony/phpunit-bridge": "~2.7|~3.0",
-        "fabpot/php-cs-fixer": "~0.5|~1.0"
+        "fabpot/php-cs-fixer": "~0.5|~1.0",
         "rmzamora/cache": "~1.0"
     },
     "suggest": {
