--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,7 @@
         "predis/predis": "~0.8",
         "symfony/phpunit-bridge": "~2.7|~3.0",
         "fabpot/php-cs-fixer": "~0.5|~1.0",
-        "rmzamora/cache": "~1.0"
+        "rmzamora/cache": "2.5.0.*"
     },
     "suggest": {
         "doctrine/doctrine-bundle": "ORM support",
@@ -50,7 +50,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "2.2-dev"
+            "dev-2.5.0": "2.5.0.x-dev"
         }
     }
 }
