--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
         "symfony/routing": "~2.4",
         "symfony/security": "~2.4",
         "symfony/process": "~2.4",        
-        "rmzamora/cache": "~1.0"
+        "rmzamora/cache": "2.5.0.*"
     },
     "require-dev": {
         "doctrine/orm": "~2.2",
